Remove last trace of backbone :(

--- a/ui/app/templates/joingame.html
+++ b/ui/app/templates/joingame.html
@@ -4,8 +4,8 @@
         <input type="text" name="demo-name" id="demo-name" value="" placeholder="Room Code">
     </div>
     <div class="6u 12u$(xsmall)">
-        <a class="button special fit" href="#/join-seat">Join</a>
-        <a class="button fit" href="#/join-and-spectate">Join as spectator</a>
+        <a class="button special fit" >Join</a>
+        <a class="button fit" >Join as spectator</a>
     </div>
     <div class="12u$">
         <a class="button" [routerLink]="['Welcome']">Back</a>
