Upgrade to Angular2 RC1, Finish work on RoleService

--- a/ui/app/templates/joingame.html
+++ b/ui/app/templates/joingame.html
@@ -8,6 +8,6 @@
         <a class="button fit" >Join as spectator</a>
     </div>
     <div class="12u$">
-        <a class="button" [routerLink]="['Welcome']">Back</a>
+        <a class="button" [routerLink]="['']">Back</a>
     </div>
 </div>
