--- a/ui/app/templates/newgame.html
+++ b/ui/app/templates/newgame.html
@@ -1,16 +1,19 @@
 <h2>Create a new game</h2>
-<div class="row uniform 50%">
-    <div class="6u$ 12u$(xsmall)" style="text-align: left">
-        <input type="checkbox" id="customize-roles" name="customize-roles">
-        <label for="customize-roles">Customize Roles</label>
+<h4 style="text-align:center">Roles</h4>
+<div class="12u$">
+    <div *ngFor="let role of roles">
+        {{role.name}}, maximum allowed percentage of users: {{role.maximumRatio*10}}%
+        <p>{{role.description}}
     </div>
-    <div class="6u 12u$(xsmall)">
+</div>
+<div class="row uniform 50%">
+    <div class="6u 12u$(xsmall)" style="text-align:left">
         <a class="button big special fit" >Create & Join</a>
     </div>
-    <div class="6u 12u$(xsmall)">
+    <div class="6u 12u$(xsmall)" style="text-align:left">
         <a class="button big special fit" >Create & Spectate</a>
     </div>
     <div class="12u$">
-        <a class="button" [routerLink]="['Welcome']">Back</a>
+        <a class="button" [routerLink]="['']">Back</a>
     </div>
 </div>
